# notebook-gpt

./: .env_template  .gitignore  Dockerfile  Example Notebook.ipynb  Example Notebook_log.json  GPT_API_Creation.ipynb  LICENSE  README.md  pyproject.toml
NotebookGPT/: GPTAPI.py  GPTLoggerView.py  GPTModel.py  GPTPlugin.py  GPTUI.py  GPTView.py  OnlineLogger.py  __init__.py
src/notebook_gpt/: GPTLoggerView.py  GPTLoggerViewStandalone.py  GPTModel.py  GPTModelStandalone.py  GPTPlugin.py  OnlineLogger.py
src/notebook_gpt_plugin/: GPTAPI.py  GPTLoggerView.py  GPTModel.py  GPTModelStandalone.py  GPTPlugin.py  GPTView.py  __init__.py
